Aba serviços | responsividade

--- a/inicio/index.html
+++ b/inicio/index.html
@@ -17,10 +17,10 @@
     <header>
     <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Início</a>
+          <a class="nav-link active" href="/inicio/index.html">Início</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Serviço</a>
+          <a class="nav-link" href="/Serviço/index.html">Serviço</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Contato</a>
@@ -42,6 +42,7 @@
               Está com dificuldade na hora de estruturar seus algoritmos? Nunca sabe por onde e nem como começar a desenvolver seu código? Sabe que é possível fazer, mas empaca na hora de por a mão na massa ou sempre coda mais do que deveria? Você sempre tem aquela sensação de que seu raciocínio lógico não está bom o suficiente?
               Lembrar de todas as funções de JavaScript e o que elas fazem é praticamente impossível, porém sabemos que não se aprende apenas decorando. 
               Que tal treinar suas habilidades diariamente com pequenos exercícios, tirar dúvidas diretamente com profissionais da área e interagir com a comunidade de devs em aprendizado que nem você?
+              Lembrar de todas as funções de JavaScript e o que elas fazem é praticamente impossível, porém sabemos que não se aprende apenas decorando. 
             </p>
         </div>
        
